--- a/package.json
+++ b/package.json
@@ -23,11 +23,21 @@
     "babel-core": "^6.17.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.16.3",
+    "body-parser": "^1.15.0",
     "consign": "^0.1.2",
+    "cors": "^2.7.1",
     "express": "^4.14.0",
     "express-fileupload": "^0.1.3",
     "express-http-proxy": "^0.10.1",
+    "helmet": "^3.4.1",
+    "jwt-simple": "^0.5.0",
     "moment": "^2.17.1",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.0.0",
+    "passport-ldapauth": "^0.5.0",
+    "q": "^1.4.1",
+    "request": "^2.78.0",
     "sequelize": "^3.24.6",
     "sequelize-formly": "^1.0.20",
     "sequelize-handlers": "^0.3.0"
