--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-ldapauth": "^0.5.0",
+    "path": "^0.12.7",
     "q": "^1.4.1",
     "request": "^2.78.0",
     "sequelize": "^3.24.6",
