--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.15.0",
     "consign": "^0.1.2",
     "cors": "^2.7.1",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-fileupload": "^0.1.3",
     "express-http-proxy": "^0.10.1",
