--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-http-proxy": "^0.10.1",
     "helmet": "^3.4.1",
     "jwt-simple": "^0.5.0",
+    "konfig": "^0.2.1",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
