--- a/package.json.sample
+++ b/package.json.sample
@@ -36,6 +36,8 @@
     "konfig": "^0.2.1",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
+    "nodemailer": "^4.3.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-ldapauth": "^0.5.0",
