--- a/package.json.sample
+++ b/package.json.sample
@@ -1,13 +1,13 @@
 {
-  "name": "flujos_documentales",
+  "name": "control_documental",
   "version": "1.0.0",
   "description": "Backend del sistema de seguimiento y control documental Virgen Niña",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
-    "startdev": "nodemon index.js --exec babel-node --presets es2015,stage-2",
-    "test": "test.js",
-    "setup": "FORCE=true babel-node --presets es2015,stage-2 index.js && sequelize db:seed:all --seeders-path src/seeders && sequelize db:migrate:undo:all --migrations-path src/migrations && sequelize db:migrate --migrations-path src/migrations"
+    "start": "node index.js",
+    "startdev": "nodemon index.js",
+    "test": "NODE_ENV=test FORCE=true node index.js && sequelize db:seed:all --env test --seeders-path src/seeders/ && sequelize db:migrate:undo:all --env test --migrations-path src/migrations && sequelize db:migrate --env test --migrations-path src/migrations && NODE_ENV=test mocha --timeout 30000 test/**/**/*.js",
+    "setup": "FORCE=true node index.js && sequelize db:seed:all --seeders-path src/seeders && sequelize db:migrate:undo:all --migrations-path src/migrations && sequelize db:migrate --migrations-path src/migrations"
   },
   "keywords": [
     "node",
@@ -20,10 +20,6 @@
   "license": "ISC",
   "homepage": "virgenniña.beracho.com",
   "dependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.17.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.16.3",
     "body-parser": "^1.15.0",
     "consign": "^0.1.2",
     "cors": "^2.7.1",
@@ -36,8 +32,9 @@
     "konfig": "^0.2.1",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
-    "nodemailer": "^4.3.1",
+    "nodemailer": "^4.3.0",
     "nodemailer-smtp-transport": "^2.7.4",
+    "nodemon": "^1.14.3",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-ldapauth": "^0.5.0",
@@ -51,12 +48,6 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-array-includes": "^2.0.3",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "database-cleaner": "^1.1.0",
     "eslint": "^2.7.0",
