--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "cors": "^2.7.1",
     "crypto": "0.0.3",
     "csvtojson": "^1.1.9",
+    "ejs": "^2.6.1",
     "express": "^4.14.0",
     "express-fileupload": "^0.1.3",
     "express-http-proxy": "^0.10.1",
     "helmet": "^3.4.1",
+    "html-pdf": "^2.2.0",
     "jwt-simple": "^0.5.0",
     "konfig": "^0.2.1",
     "moment": "^2.17.1",
